--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark font-weight-bold mr-4" href="#">About</a>
+                            <a class="nav-link text-dark font-weight-bold mr-4" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark font-weight-bold mr-4" href="#">Services</a>
+                            <a class="nav-link text-dark font-weight-bold mr-4" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark font-weight-bold mr-4" href="team.html">Team</a>
