--- a/potfolio.html
+++ b/potfolio.html
@@ -40,7 +40,7 @@
                             <a class="nav-link text-dark font-weight-bold mr-4" href="team.html">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark font-weight-bold mr-4" href="#">Portfolio</a>
+                            <a class="nav-link text-dark font-weight-bold mr-4" href="potfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark font-weight-bold mr-4" href="blogs.html">Blog</a>
@@ -100,7 +100,7 @@
                         <div class="col-12 ">
                             <div class="shadow-lg bg-white p-3" style="border-radius: 25px;">
                                 <img src="images/awa 1.png" class="img-fluid mb-3">
-                                <span class="text-port text-uppercase text-muted">Awdua plus</span> <span
+                                <span class="text-port text-uppercase text-muted">Awua plus</span> <span
                                     class="float-right"><img src="images/android.png" width="12"> <img class="ml-2"
                                         src="images/apple.png" width="12"></span>
 
