--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
               <a class="nav-link text-dark font-weight-bold mr-4" href="team.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark font-weight-bold mr-4" href="#">Portfolio</a>
+              <a class="nav-link text-dark font-weight-bold mr-4" href="potfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-dark font-weight-bold mr-4" href="blogs.html">Blog</a>
