--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Web Design & Development</h5> <span><img src="images/web ser.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                 <a href="services-detail.html"> <button class="btn btn-services mt-1">Read More</button> </a> 
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Search Engine Optimization</h5> <span><img src="images/seo ser.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html">  <button class="btn btn-services mt-1">Read More</button> </a>
                                 </div>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Andriod App Development</h5> <span><img src="images/mobile.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button> </a>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Enterprise Cms Development</h5> <span><img src="images/cms.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">E-commerce Development</h5> <span><img src="images/e commerce.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Document security & Services</h5> <span><img src="images/secuirty.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Product Development</h5> <span><img src="images/product.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">cloud and saas Development</h5> <span><img src="images/cloud.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Internet of things</h5> <span><img src="images/iot.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Manage Services</h5> <span><img src="images/manage.png"  width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">Software testing</h5> <span><img src="images/testing.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                                 <h5 class="text-uppercase font-career font-weight-bold ">chat board development</h5> <span><img src="images/development.png" width="55" class="img-service"> </span>
                                 <p class="mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur libero cum modi in ipsa, explicabo odio voluptatem </p>
                                 <div class="text-center">
-                                    <button class="btn btn-services mt-1">Read More</button>
+                                    <a href="services-detail.html"><button class="btn btn-services mt-1">Read More</button></a>
                                 </div>
                             </div>
                         </div>
