--- a/career.html
+++ b/career.html
@@ -96,7 +96,9 @@
                     <div class="box-style2 p-2">
                         <div class="row">
                             <div class="col-8">
-                                <h5 class="text-uppercase font-career font-weight-bold mt-1">IOS Developer</h5>
+                                <a href="#" class="text-dark" data-toggle="modal" data-target=".bd-example-modal-lg">
+                                    <h5 class="text-uppercase font-career font-weight-bold mt-1">IOS Developer</h5>
+                                </a>
                                 <h5 class="font-career text-muted">Vacancies:<span> 1</span></h5>
                                 <h5 class="font-career mt-2 text-muted">Location:<span> Islamabad</span></h5>
                             </div>
@@ -114,7 +116,9 @@
                     <div class="box-style2 p-2">
                         <div class="row">
                             <div class="col-8">
-                                <h5 class="text-uppercase font-career font-weight-bold mt-1">Php Developer</h5>
+                                <a href="#" class="text-dark" data-toggle="modal" data-target=".bd-example-modal-lg">
+                                    <h5 class="text-uppercase font-career font-weight-bold mt-1">Php Developer</h5>
+                                </a>
                                 <h5 class="font-career text-muted">Vacancies:<span> 1</span></h5>
                                 <h5 class="font-career mt-2 text-muted">Location:<span> Islamabad</span></h5>
                             </div>
@@ -132,7 +136,9 @@
                     <div class="box-style2 p-2">
                         <div class="row">
                             <div class="col-8">
-                                <h5 class="text-uppercase font-career font-weight-bold mt-1">Seo Expert</h5>
+                                <a href="#" class="text-dark" data-toggle="modal" data-target=".bd-example-modal-lg">
+                                    <h5 class="text-uppercase font-career font-weight-bold mt-1">Seo Expert</h5>
+                                </a>
                                 <h5 class="font-career text-muted">Vacancies:<span> 1</span></h5>
                                 <h5 class="font-career mt-2 text-muted">Location:<span> Islamabad</span></h5>
                             </div>
@@ -150,7 +156,10 @@
                     <div class="box-style2 p-2">
                         <div class="row">
                             <div class="col-8">
-                                <h5 class="text-uppercase font-career font-weight-bold mt-1">Front End Developer</h5>
+                                <a href="#" class="text-dark" data-toggle="modal" data-target=".bd-example-modal-lg">
+                                    <h5 class="text-uppercase font-career font-weight-bold mt-1">Front End Developer
+                                    </h5>
+                                </a>
                                 <h5 class="font-career text-muted">Vacancies:<span> 1</span></h5>
                                 <h5 class="font-career mt-2 text-muted">Location:<span> Islamabad</span></h5>
                             </div>
@@ -168,7 +177,9 @@
                     <div class="box-style2 p-2">
                         <div class="row">
                             <div class="col-8">
-                                <h5 class="text-uppercase font-career font-weight-bold mt-1">Business Developer</h5>
+                                <a href="#" class="text-dark" data-toggle="modal" data-target=".bd-example-modal-lg">
+                                    <h5 class="text-uppercase font-career font-weight-bold mt-1">Business Developer</h5>
+                                </a>
                                 <h5 class="font-career text-muted">Vacancies:<span> 1</span></h5>
                                 <h5 class="font-career mt-2 text-muted">Location:<span> Islamabad</span></h5>
                             </div>
@@ -186,7 +197,9 @@
                     <div class="box-style2 p-2">
                         <div class="row">
                             <div class="col-8">
-                                <h5 class="text-uppercase font-career font-weight-bold mt-1">Android Developer</h5>
+                                <a href="#" class="text-dark" data-toggle="modal" data-target=".bd-example-modal-lg">
+                                    <h5 class="text-uppercase font-career font-weight-bold mt-1">Android Developer</h5>
+                                </a>
                                 <h5 class="font-career text-muted">Vacancies:<span> 1</span></h5>
                                 <h5 class="font-career mt-2 text-muted">Location:<span> Islamabad</span></h5>
                             </div>
@@ -206,6 +219,118 @@
     </section>
 
 
+    <!--=============================================== Modal=================================== -->
+    <div class="modal fade bd-example-modal-lg " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-main">
+                    <h5 class="modal-title text-white" id="exampleModalLongTitle">PHP developer (Vacancies: 1)</h5>
+                    <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close"
+                        style="opacity: 1;">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- description -->
+                    <div id="form" style="display: none;">
+                        <h4 class="text-uppercase mt-3 heading-size text-oranje">Enter your information</h4>
+                        <form>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="form-group mt-3">
+                                        <input type="text" class="form-control border-form" id="exampleInputName1"
+                                            aria-describedby="emailHelp" placeholder="Name">
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input type="email" class="form-control border-form" id="exampleInputEmail1"
+                                            placeholder="Email Address">
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input type="text" class="form-control border-form" id="exampleInputContact1"
+                                            placeholder="Contact">
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input type="text" class="form-control border-form bg-white"
+                                            id="exampleInputFile1" disabled placeholder="Upload Resume">
+                                        <div class="image-upload">
+                                            <label for="file-input">
+                                                <a class="btn btn-read position-btn">Choose File</a>
+                                            </label>
+
+                                            <input id="file-input" type="file" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-5">
+                                <div class="col-md-12 ">
+                                    <div class="text-center pt-5 pb-2">
+                                        <button class="btn btn-read">Clear Form</button>
+                                        <button class="btn btn-apply">Apply</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- form -->
+                    <div id="description">
+                        <h4 class="text-uppercase mt-3 heading-size text-oranje">Job Descriptions</h4>
+                        <div class="container">
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Highly talented and motivated
+                            </h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Keen Interest in UI/UX
+                                designing</h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Highly talented and motivated
+                            </h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Keen Interest in UI/UX
+                                designing</h5>
+                        </div>
+                        <h4 class="text-uppercase mt-5 heading-size text-oranje">Education & Experience</h4>
+                        <div class="container">
+                            <h5 class="font-weight-bold text-small pl-3 mt-3" style="border: none;">Education</h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-1 text-muted" style="border: none;">BS/MS
+                                Dgree In Computer Science/Information Technology</h5>
+                            <h5 class="font-weight-bold text-small pl-3 mt-4" style="border: none;">Experience</h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-1 text-muted" style="border: none;">More
+                                Then 1 year</h5>
+
+                        </div>
+                        <h4 class="text-uppercase mt-5 heading-size text-oranje">Required Skills</h4>
+                        <div class="container">
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Experience of Working with
+                                PHP CMS</h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Keen Interest in UI/UX
+                                designing</h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Highly talented and motivated
+                            </h5>
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted">Knowledge of Shopify</h5>
+                        </div>
+                        <h4 class="text-uppercase mt-5 heading-size text-oranje">Job Location</h4>
+                        <div class="container">
+                            <h5 class="font-weight-normal text-small pl-3 mt-3 text-muted" style="border: none;">
+                                Islamabd</h5>
+                        </div>
+                        <div class="row mt-5 mb-3">
+                            <div class="col-md-12">
+                                <div class="text-center">
+                                    <button class="btn btn-read" onclick="hideElement()">Apply Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        function hideElement() {
+            document.getElementById('description').style.display = 'none';
+            document.getElementById('form').style.display = 'block';
+        }
+    </script>
     <!----------------------------------------Footer------------------------------------ -->
     <footer class="pt-5 pb-4 footer-bg mt-5">
         <div class="container">
