--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -62,7 +62,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-10">
                     <div class="text-center">
-                        <h2 class="font-weight-bold text-uppercase">Portfolio</h2>
+                        <h2 class="font-weight-bold text-uppercase">Awua plus</h2>
                         <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam commodi
                             repellat quasi reiciendis non
                             explicabo repellendus adipisci nisi porro ipsam vitae voluptates, delectus laboriosam
