box sixe commit

--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
         </div>
       </nav>
     </div>
-    <div class="container" style="padding-top: 7rem;">
+    <div class="container top-position" >
       <div class="row justify-content-center">
         <div class="col-md-10">
           <div class="text-center">
@@ -292,7 +292,7 @@
       </div>
     </div>
   </section>
-  <!------------------------------------------------------------- our client-------------------------------- -->
+  <!------------------------------------------------------------- our client+ testimonial-------------------------------- -->
   <section class="bg-says">
     <div class="container mb-5">
       <div class="row justify-content-center">
@@ -324,6 +324,57 @@
         </div>
       </div>
     </div>
+    <!--=========================================== what people says============================ -->
+    <section class="bg-says-2">
+      <div class="container pt-5">
+        <div class="row">
+          <div class="col-md-3 mt-2 m-auto">
+            <h5 class="text-white text-capitalize">What People says about <br>Oranjeclick</h5>
+          </div>
+          <div class="col-md-3 mt-2">
+            <div class="card">
+              <div class="card-body">
+                <div class="text-center">
+                  <img src="images/mobile app development.png" class="img-fluid mt-3" width="100">
+                  <h6 class="font-weight-bold text-uppercase mt-5">Mobile App development</h6>
+                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur
+                    nulla, </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mt-2">
+            <div class="card">
+              <div class="card-body">
+                <div class="text-center">
+                  <img src="images/web.png" class="img-fluid mt-3" width="100">
+                  <h6 class="font-weight-bold text-uppercase mt-5">Web Development</h6>
+                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur
+                    nulla, </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mt-2">
+            <div class="card">
+              <div class="card-body">
+                <div class="text-center">
+                  <img src="images/seo.png" class="img-fluid mt-3" width="100">
+                  <h6 class="font-weight-bold text-uppercase mt-5">Search Engine optimization</h6>
+                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur
+                    nulla, </p>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+      <div class="text-center">
+        <img class="pb-4 mt-4" src="images/slider.png">
+      </div>
+  
+    </section>
   </section>
   <!-------------------------------------------------Our Team--------------------------------------  -->
   <section>
@@ -516,7 +567,7 @@
             </div>
 
           </div>
-          <div class="row mt-4">
+          <!-- <div class="row mt-4">
             <div class="col-1">
               <img src="images/Group 45.png" width="40">
 
@@ -525,7 +576,7 @@
               <span class="resp-margin text-muted">www.oranjeclick.com </span>
             </div>
 
-          </div>
+          </div> -->
         </div>
         <div class="col-md-6 form-margin">
           <form>
