--- a/potfolio.html
+++ b/potfolio.html
@@ -96,9 +96,9 @@
             <div class="row ">
                 <div class="col-md-3 mt-3">
                         <a href="portfolio_detail.html" class="text-decoration-none">
-                            <div class="shadow-lg bg-white p-3" style="border-radius: 25px;">
+                            <div class="shadow-card bg-white p-2" style="border-radius: 10px;">
                                 <img src="images/awa 1.png" class="img-fluid mb-3">
-                                <span class="text-port text-uppercase text-muted">Awua plus</span> <span
+                                <span class="text-port text-uppercase text-muted ">Awua plus</span> <span
                                     class="float-right"><img src="images/android.png" width="12"> <img class="ml-2"
                                         src="images/apple.png" width="12"></span>
                             </div>
