--- a/home.html
+++ b/home.html
@@ -625,14 +625,14 @@
       </div>
     </div>
   </div>
-
+<!-- -----------------------------------Floating Button--------------------------------------------- -->
   <div>
     <a href="#" class="float-card text-decoration-none "  data-toggle="modal" data-target="#exampleModalCenter1">
 
-       <div class="bg-main p-1" style="border-radius:7px 0px 0px 7px;">
+       <div class="bg-main p-0" style="border-radius:7px 0px 0px 7px;">
          <h6 class="text-white pt-1" style="letter-spacing: 3px;">Contact us</h6>
          <h6 class="text-white">for</h6>
-         <h6 class="text-white font-weight-bold" style="font-size: 18px;">Quote</h6>
+         <h6 class="text-white font-weight-bold pb-1" style="font-size: 14px;">Quote</h6>
 
        </div>
     </a>
