--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
   </section>
 
   <!-------------------------------------------------Our Team-------------------------------------- ----->
-  <section>
+  <section class="bg-light">
     <div class="container mb-5 pb-5 ">
       <div class="row">
         <div class="col-md-12">
@@ -87,7 +87,59 @@
             repudiandae ex, nihil itaque delectus at culpa rem.</p>
         </div>
       </div>
-      <div class="row mt-md-5">
+      <div class="row mt-5 justify-content-center">
+        <div class="col-md-11">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5 justify-content-center">
+        <div class="col-md-11">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+            <div class="col-md-3">
+              <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
+              <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
+              <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="row mt-md-5">
         <div class="col-md-3 mt-3">
           <div class="contanier">
             <div class="col-12 ">
@@ -272,7 +324,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
     <!-- -----------------------------------Floating Button--------------------------------------------- -->
